@startuml Command Component Diagram

skinparam class {
    BackgroundColor LightGreen
    BorderColor Black
    ArrowColor Black
}

package "Command" {
    interface CommandInterface {
            + {abstract} execute(): void
            + {abstract} undo(): void
        }


    class AddBookCommand {
        - library: Library
        - book: Book
        + AddBookCommand(library: Library, book: Book)
        + execute(): void
        + undo(): void
    }

    class DeleteBookCommand {
        - library: Library
        - isbn: String
        - deletedBook: Book
        + DeleteBookCommand(library: Library, isbn: String)
        + execute(): void
        + undo(): void
    }

    class UpdateBookCommand {
        - library: Library
        - isbn: String
        - oldBook: Book
        - updateDTO: BookUpdateDTO
        + UpdateBookCommand(library: Library, updateDTO: BookUpdateDTO)
        + execute(): void
        + undo(): void
    }
}

' Relazioni interne al package Command
CommandInterface <|.. AddBookCommand
CommandInterface <|.. DeleteBookCommand
CommandInterface <|.. UpdateBookCommand


@enduml
